@@ -21,7 +21,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.flywaydb.core.Flyway;
@@ -116,7 +115,7 @@ public class FlywayEndpoint {
 		private final List<FlywayMigrationDescriptor> migrations;
 
 		private FlywayDescriptor(MigrationInfo[] migrations) {
-			this.migrations = Stream.of(migrations).map(FlywayMigrationDescriptor::new).collect(Collectors.toList());
+			this.migrations = Stream.of(migrations).map(FlywayMigrationDescriptor::new).toList();
 		}
 
 		public FlywayDescriptor(List<FlywayMigrationDescriptor> migrations) {
